# TL_curve_fitting

./: INSTALL_GUIDE.md  README.md  SpreadsheetParser.ipynb  TL_5peak_a.csv  TL_5peak_b.csv  TL_DEF.md  USAGE.md  bounds.csv  bounds2.csv  cffi_test.py  cffi_test2.py  cpp_differential_evolution.cp311-win_amd64.pyd  cpp_differential_evolution.cpp  data_one-peak.csv  main.py  model.py  output.csv  plotter.py  progress_bar.py  real_bounds.csv  real_data.csv  real_data2.csv  real_data3.csv  real_data4.csv  setup.py  solver.py  three_peak.csv
.ipynb_checkpoints/: data_multi-peak-checkpoint.csv  real_data-checkpoint.csv
C++/: CMakeLists.txt
C++/include/: CDifferentialEvolution.h  CPPDifferentialEvolution.h  DifferentialEvolution.h  progressbar.hpp
C++/src/: CDifferentialEvolution.cpp  CPPDifferentialEvolution.cpp  main.cpp
Release/C++/: cpp_differential_evolution.cp311-win_amd64.exp
Release/C++/src/: cpp_differential_evolution.cp311-win_amd64.exp  cpp_differential_evolution.cp311-win_amd64.lib
